--- a/Fire Journal/Dashboard/ShiftCells/IncidentLabelDateiPhoneTVCell.xib
+++ b/Fire Journal/Dashboard/ShiftCells/IncidentLabelDateiPhoneTVCell.xib
@@ -35,7 +35,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4pS-nV-Axf">
                         <rect key="frame" x="26" y="50" width="240" height="38"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="cJU-EK-AoH">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="cJU-EK-AoH">
                                 <rect key="frame" x="0.0" y="3" width="230" height="31"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" systemColor="labelColor"/>
@@ -47,6 +47,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="38" id="Bof-ej-fg4"/>
+                            <constraint firstItem="cJU-EK-AoH" firstAttribute="width" secondItem="4pS-nV-Axf" secondAttribute="width" multiplier="0.958333" id="M66-2x-hGC"/>
                             <constraint firstAttribute="width" constant="240" id="lhY-8y-l63"/>
                             <constraint firstItem="cJU-EK-AoH" firstAttribute="leading" secondItem="4pS-nV-Axf" secondAttribute="leading" id="rkk-nm-ESl"/>
                             <constraint firstItem="cJU-EK-AoH" firstAttribute="top" secondItem="4pS-nV-Axf" secondAttribute="top" constant="3" id="tSM-yj-Po7"/>
