--- a/Fire Journal/Dashboard/ShiftCells/IncidentSameDateiPhoneTVCell.xib
+++ b/Fire Journal/Dashboard/ShiftCells/IncidentSameDateiPhoneTVCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -24,7 +23,17 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g8O-v9-3Wq">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Same as alarm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wdx-VV-1Ug">
+                        <rect key="frame" x="26" y="52" width="135" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="135" id="bmM-9U-MjS"/>
+                            <constraint firstAttribute="height" constant="21" id="d1e-TO-cZr"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g8O-v9-3Wq">
                         <rect key="frame" x="169" y="47" width="51" height="31"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="31" id="G70-Sv-uh5"/>
@@ -34,16 +43,29 @@
                             <action selector="sameAsAlarmTapped:" destination="Qj6-ml-cWK" eventType="valueChanged" id="QY0-Hb-xZE"/>
                         </connections>
                     </switch>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Same as alarm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wdx-VV-1Ug">
-                        <rect key="frame" x="26" y="52" width="135" height="21"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFR-3l-GwQ">
+                        <rect key="frame" x="26" y="82" width="240" height="38"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="uiW-cn-tqh">
+                                <rect key="frame" x="0.0" y="3" width="230" height="31"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <connections>
+                                    <action selector="datePickerTapped:forEvent:" destination="Qj6-ml-cWK" eventType="valueChanged" id="3ke-jh-3pF"/>
+                                </connections>
+                            </datePicker>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="135" id="amh-mk-w7c"/>
+                            <constraint firstItem="uiW-cn-tqh" firstAttribute="width" secondItem="xFR-3l-GwQ" secondAttribute="width" multiplier="0.958333" id="BBj-Gp-BaU"/>
+                            <constraint firstAttribute="width" constant="240" id="PBf-d1-I48"/>
+                            <constraint firstItem="uiW-cn-tqh" firstAttribute="leading" secondItem="xFR-3l-GwQ" secondAttribute="leading" id="SP1-Nf-UQR"/>
+                            <constraint firstItem="uiW-cn-tqh" firstAttribute="height" secondItem="xFR-3l-GwQ" secondAttribute="height" multiplier="0.815789" id="ghN-GB-J1L"/>
+                            <constraint firstItem="uiW-cn-tqh" firstAttribute="top" secondItem="xFR-3l-GwQ" secondAttribute="top" constant="3" id="q3s-uT-BGo"/>
+                            <constraint firstAttribute="height" constant="38" id="yxg-nS-A74"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Thurs March 21, 2022 11:16:05HR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieN-iZ-wPp">
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thurs March 21, 2022 11:16:05HR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieN-iZ-wPp">
                         <rect key="frame" x="26" y="134" width="343" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="343" id="wns-iT-lUa"/>
@@ -52,34 +74,24 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="DIg-Vn-XvY">
-                        <rect key="frame" x="26" y="89" width="203" height="31"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" systemColor="labelColor"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="203" id="F7b-H6-ZCC"/>
-                            <constraint firstAttribute="height" constant="31" id="ucN-YA-5Wn"/>
-                        </constraints>
-                        <connections>
-                            <action selector="datePickerTapped:forEvent:" destination="Qj6-ml-cWK" eventType="valueChanged" id="sO8-68-bu8"/>
-                        </connections>
-                    </datePicker>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="g8O-v9-3Wq" firstAttribute="leading" secondItem="Wdx-VV-1Ug" secondAttribute="trailing" constant="8" symbolic="YES" id="0b8-p0-jge"/>
-                    <constraint firstItem="ieN-iZ-wPp" firstAttribute="top" secondItem="DIg-Vn-XvY" secondAttribute="bottom" constant="14" id="IV8-Gz-nVw"/>
-                    <constraint firstItem="DIg-Vn-XvY" firstAttribute="top" secondItem="Wdx-VV-1Ug" secondAttribute="bottom" constant="16" id="L8f-yn-cwH"/>
+                    <constraint firstItem="g8O-v9-3Wq" firstAttribute="leading" secondItem="Wdx-VV-1Ug" secondAttribute="trailing" constant="8" symbolic="YES" id="H1l-Xv-Ssm"/>
+                    <constraint firstItem="ieN-iZ-wPp" firstAttribute="leading" secondItem="jqo-Z3-qgT" secondAttribute="leading" id="N41-se-yji"/>
                     <constraint firstItem="jqo-Z3-qgT" firstAttribute="leading" secondItem="yHX-Xn-0ga" secondAttribute="leading" constant="26" id="S9H-Za-3jW"/>
                     <constraint firstItem="g8O-v9-3Wq" firstAttribute="centerY" secondItem="Wdx-VV-1Ug" secondAttribute="centerY" id="U1r-6S-Ndc"/>
+                    <constraint firstItem="xFR-3l-GwQ" firstAttribute="leading" secondItem="jqo-Z3-qgT" secondAttribute="leading" id="XAJ-9P-zrI"/>
+                    <constraint firstItem="ieN-iZ-wPp" firstAttribute="top" secondItem="xFR-3l-GwQ" secondAttribute="bottom" constant="14" id="dTp-54-F75"/>
                     <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="jqo-Z3-qgT" secondAttribute="trailing" constant="35" id="jrf-ZY-i1b"/>
-                    <constraint firstItem="DIg-Vn-XvY" firstAttribute="leading" secondItem="jqo-Z3-qgT" secondAttribute="leading" id="kFw-RF-O8O"/>
                     <constraint firstItem="Wdx-VV-1Ug" firstAttribute="top" secondItem="jqo-Z3-qgT" secondAttribute="bottom" constant="9" id="ojL-4d-uxr"/>
+                    <constraint firstItem="xFR-3l-GwQ" firstAttribute="top" secondItem="g8O-v9-3Wq" secondAttribute="bottom" constant="4" id="uP2-TA-aOe"/>
                     <constraint firstItem="jqo-Z3-qgT" firstAttribute="top" secondItem="yHX-Xn-0ga" secondAttribute="top" constant="14" id="yvk-vR-QFw"/>
+                    <constraint firstItem="Wdx-VV-1Ug" firstAttribute="leading" secondItem="jqo-Z3-qgT" secondAttribute="leading" id="zIR-dR-KkV"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="gWJ-yP-lM8"/>
             <connections>
-                <outlet property="datePicker" destination="DIg-Vn-XvY" id="CW9-iz-jbv"/>
+                <outlet property="datePicker" destination="uiW-cn-tqh" id="e9l-3b-D1R"/>
                 <outlet property="sameAsAlarmL" destination="Wdx-VV-1Ug" id="i7K-D4-SHp"/>
                 <outlet property="sameAsAlarmSwitch" destination="g8O-v9-3Wq" id="Syl-xN-f9A"/>
                 <outlet property="subjectL" destination="jqo-Z3-qgT" id="mS0-Vi-t1J"/>
@@ -91,6 +103,9 @@
     <resources>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
