--- a/Fire Journal/Cells/ProfileLabelCell.xib
+++ b/Fire Journal/Cells/ProfileLabelCell.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,23 +13,19 @@
             <rect key="frame" x="0.0" y="0.0" width="500" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="faB-G4-aM5" id="K0w-C0-zbC">
-                <rect key="frame" x="0.0" y="0.0" width="500" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="500" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aSl-OG-OFS">
-                        <rect key="frame" x="20" y="9" width="46" height="21.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
-                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <rect key="frame" x="26" y="9" width="56" height="26.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                         <nil key="highlightedColor"/>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
-                        </variation>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="aSl-OG-OFS" firstAttribute="top" secondItem="K0w-C0-zbC" secondAttribute="top" constant="9" id="CcN-19-oro"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aSl-OG-OFS" secondAttribute="trailing" id="MwY-Vk-kvl"/>
-                    <constraint firstItem="aSl-OG-OFS" firstAttribute="leading" secondItem="K0w-C0-zbC" secondAttribute="leading" constant="20" id="OYo-ed-Ral"/>
+                    <constraint firstItem="aSl-OG-OFS" firstAttribute="leading" secondItem="K0w-C0-zbC" secondAttribute="leading" constant="26" id="OYo-ed-Ral"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="xto-5F-Ul3"/>
