working on ICS214 - have got the master/additional form finally working nicely - now rebuilding the actual form adding two uIcollection views for the personnel and activity log - need to expand iCloud records
dj 08092022

--- a/Fire Journal/storyboards/ICS214Form.storyboard
+++ b/Fire Journal/storyboards/ICS214Form.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,7 +17,7 @@
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="CustomCell" id="9NA-qb-cR9" customClass="CustomCellOne" customModule="Fire_Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="768" height="44"/>
+                                <rect key="frame" x="0.0" y="44.5" width="768" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9NA-qb-cR9" id="Xbn-4C-lAh">
                                     <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
@@ -36,6 +36,14 @@
             </objects>
             <point key="canvasLocation" x="708" y="128"/>
         </scene>
+        <!--ICS214NewVC-->
+        <scene sceneID="Que-hq-Kw1">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="ICS214New" storyboardName="ICS214New" referencedIdentifier="ICS214NewVC" id="tMZ-fz-B2r" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HKa-qK-eKN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4339" y="-39"/>
+        </scene>
         <!--NewICS214TVC-->
         <scene sceneID="DhX-AM-NhH">
             <objects>
@@ -46,7 +54,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="ModalCustomCell" id="QZA-C5-r2W">
-                                <rect key="frame" x="0.0" y="28" width="500" height="44"/>
+                                <rect key="frame" x="0.0" y="44.5" width="500" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QZA-C5-r2W" id="mZC-tH-RZo">
                                     <rect key="frame" x="0.0" y="0.0" width="500" height="44"/>
@@ -74,7 +82,7 @@
             <objects>
                 <navigationController id="vC3-pB-5Vb" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="DjV-YW-jjY">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="50"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -96,7 +104,7 @@
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="Team Cell" id="2R0-Xg-0mQ">
-                                <rect key="frame" x="0.0" y="28" width="540" height="44"/>
+                                <rect key="frame" x="0.0" y="44.5" width="540" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2R0-Xg-0mQ" id="9iN-Fv-wgT">
                                     <rect key="frame" x="0.0" y="0.0" width="540" height="44"/>
@@ -130,7 +138,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="540" height="620"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fHC-45-Qgm">
-                        <rect key="frame" x="0.0" y="0.0" width="540" height="50"/>
+                        <rect key="frame" x="0.0" y="20" width="540" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -151,7 +159,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="540" height="620"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vdh-Nw-euE">
-                        <rect key="frame" x="0.0" y="0.0" width="540" height="50"/>
+                        <rect key="frame" x="0.0" y="20" width="540" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -174,7 +182,7 @@
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="ContactCell" id="Aza-kP-Juv">
-                                <rect key="frame" x="0.0" y="28" width="540" height="44"/>
+                                <rect key="frame" x="0.0" y="44.5" width="540" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Aza-kP-Juv" id="CNh-f6-F2h">
                                     <rect key="frame" x="0.0" y="0.0" width="540" height="44"/>
@@ -208,7 +216,7 @@
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="Cell" id="9aP-FK-gGl">
-                                <rect key="frame" x="0.0" y="28" width="500" height="44"/>
+                                <rect key="frame" x="0.0" y="44.5" width="500" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9aP-FK-gGl" id="RFi-9p-ZyC">
                                     <rect key="frame" x="0.0" y="0.0" width="500" height="44"/>
@@ -281,7 +289,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="Cell" id="3FD-Mp-rnI">
-                                <rect key="frame" x="0.0" y="28" width="540" height="43.5"/>
+                                <rect key="frame" x="0.0" y="44.5" width="540" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3FD-Mp-rnI" id="UUO-0r-0Kz">
                                     <rect key="frame" x="0.0" y="0.0" width="540" height="43.5"/>
@@ -314,7 +322,7 @@
                     <toolbarItems/>
                     <size key="freeformSize" width="540" height="620"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uel-y8-z8A">
-                        <rect key="frame" x="0.0" y="0.0" width="540" height="50"/>
+                        <rect key="frame" x="0.0" y="20" width="540" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -334,7 +342,7 @@
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" id="Tnx-RB-6nM">
-                                <rect key="frame" x="0.0" y="28" width="500" height="44"/>
+                                <rect key="frame" x="0.0" y="44.5" width="500" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tnx-RB-6nM" id="jL0-C8-UnV">
                                     <rect key="frame" x="0.0" y="0.0" width="500" height="44"/>
@@ -352,13 +360,13 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="500" height="1266"/>
                     <connections>
-                        <segue destination="sQO-7q-lg7" kind="showDetail" identifier="NewICS214TVCSegue" id="LlB-ol-gww"/>
                         <segue destination="myF-AD-rw9" kind="showDetail" identifier="NewICS214NewIncidentTVCSegue" id="dWl-Pl-7v9"/>
+                        <segue destination="tMZ-fz-B2r" kind="showDetail" identifier="ICS214NewSegue" id="sH8-gl-J3g"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jTN-fB-MkJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4147" y="-91"/>
+            <point key="canvasLocation" x="4035" y="-93"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
