--- a/Fire Journal/NIMICS214/OldICS214/formCells/openingModalCells/EffortWithDateCell.xib
+++ b/Fire Journal/NIMICS214/OldICS214/formCells/openingModalCells/EffortWithDateCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -46,7 +46,9 @@
                         <color key="backgroundColor" name="FJIncidentPlaceHolderRedColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="28" id="Ls6-TY-M4L"/>
-                            <constraint firstAttribute="width" constant="172" id="PYL-al-rhG"/>
+                            <constraint firstAttribute="width" constant="172" id="PYL-al-rhG">
+                                <variation key="heightClass=regular-widthClass=compact" constant="150"/>
+                            </constraint>
                         </constraints>
                         <state key="normal" title="Search">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -60,7 +62,9 @@
                         <color key="backgroundColor" name="FJIncidentPlaceHolderRedColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="28" id="7zF-Tz-OZZ"/>
-                            <constraint firstAttribute="width" constant="172" id="jG9-UD-P4F"/>
+                            <constraint firstAttribute="width" constant="172" id="jG9-UD-P4F">
+                                <variation key="heightClass=regular-widthClass=compact" constant="150"/>
+                            </constraint>
                         </constraints>
                         <state key="normal" title="New Incident">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -86,10 +90,10 @@
                     <constraint firstItem="1pb-dH-t0x" firstAttribute="leading" secondItem="W4l-iR-ggD" secondAttribute="trailing" constant="20" id="xEJ-Rb-nqj"/>
                 </constraints>
             </tableViewCellContentView>
+            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <constraints>
                 <constraint firstItem="hTI-45-GHI" firstAttribute="leading" secondItem="njF-e1-oar" secondAttribute="leading" constant="45" id="YzD-u4-JLc"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="continueButton" destination="1pb-dH-t0x" id="laN-lo-tIH"/>
                 <outlet property="instructionL" destination="fto-uv-tdE" id="Hu4-Ye-dGG"/>
