--- a/Fire Journal/NIMICS214/OldICS214/formCells/openingModalCells/FourSwitchCell.xib
+++ b/Fire Journal/NIMICS214/OldICS214/formCells/openingModalCells/FourSwitchCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="ipad12_9" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bq0-4V-8KG">
-                        <rect key="frame" x="47" y="11" width="448" height="130"/>
+                        <rect key="frame" x="47" y="11" width="434" height="130"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="130" id="Zbi-Bp-PLf">
                                 <variation key="heightClass=regular-widthClass=compact" constant="220"/>
@@ -30,13 +30,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This ICS 214 form is to be used with which effort:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Qa-nY-j6C">
-                        <rect key="frame" x="47" y="145" width="446" height="24"/>
+                        <rect key="frame" x="47" y="145" width="432" height="24"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="xWa-RK-vjY">
-                        <rect key="frame" x="47" y="188" width="325" height="197"/>
+                        <rect key="frame" x="33" y="188" width="325" height="197"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Local Incident:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2K-i9-iQI">
                                 <rect key="frame" x="0.0" y="0.0" width="325" height="29"/>
@@ -89,7 +89,7 @@
                         </subviews>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="5LZ-lz-rrq">
-                        <rect key="frame" x="396" y="188" width="47" height="199"/>
+                        <rect key="frame" x="382" y="188" width="47" height="199"/>
                         <subviews>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QeT-NS-GSc">
                                 <rect key="frame" x="0.0" y="0.0" width="49" height="31"/>
@@ -137,11 +137,12 @@
                             </switch>
                         </subviews>
                     </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="svu-yf-mdG">
-                        <rect key="frame" x="465" y="188" width="30" height="198"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="svu-yf-mdG">
+                        <rect key="frame" x="451" y="188" width="30" height="198"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lastMaster" translatesAutoresizingMaskIntoConstraints="NO" id="QTd-P8-cYE">
                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                <color key="tintColor" name="FJARCRed"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="DIY-gW-K1i"/>
                                     <constraint firstAttribute="height" constant="30" id="ZUK-b1-w22"/>
@@ -149,6 +150,7 @@
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lastMaster" translatesAutoresizingMaskIntoConstraints="NO" id="VV3-l6-asw">
                                 <rect key="frame" x="0.0" y="56" width="30" height="30"/>
+                                <color key="tintColor" name="FJGoldColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Kgn-vq-gVv"/>
                                     <constraint firstAttribute="width" constant="30" id="pzg-4f-dBB"/>
@@ -156,6 +158,7 @@
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lastMaster" translatesAutoresizingMaskIntoConstraints="NO" id="9qX-MQ-91N">
                                 <rect key="frame" x="0.0" y="112" width="30" height="30"/>
+                                <color key="tintColor" name="FJDarkBlue"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="BOQ-be-NR4"/>
                                     <constraint firstAttribute="height" constant="30" id="paV-00-0D3"/>
@@ -163,6 +166,7 @@
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lastMaster" translatesAutoresizingMaskIntoConstraints="NO" id="xXQ-H7-mhL">
                                 <rect key="frame" x="0.0" y="168" width="30" height="30"/>
+                                <color key="tintColor" name="FJGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="GMd-HA-z3Z"/>
                                     <constraint firstAttribute="height" constant="30" id="hzb-Kz-F13"/>
@@ -171,7 +175,7 @@
                         </subviews>
                     </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g51-tR-sUz">
-                        <rect key="frame" x="47" y="450" width="446" height="105"/>
+                        <rect key="frame" x="47" y="450" width="432" height="105"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="105" id="4hV-Db-dJF">
                                 <variation key="heightClass=regular-widthClass=compact" constant="75"/>
@@ -186,7 +190,7 @@
                         </variation>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYA-gP-yKS">
-                        <rect key="frame" x="321" y="410" width="172" height="32"/>
+                        <rect key="frame" x="309" y="410" width="172" height="32"/>
                         <color key="backgroundColor" name="FJIncidentPlaceHolderRedColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="32" id="cqs-T8-qvI"/>
@@ -208,14 +212,15 @@
                     <constraint firstItem="g51-tR-sUz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="47" id="ArM-Za-8aH"/>
                     <constraint firstItem="bq0-4V-8KG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="D4P-4c-lBT"/>
                     <constraint firstItem="5LZ-lz-rrq" firstAttribute="leading" secondItem="xWa-RK-vjY" secondAttribute="trailing" constant="24" id="Oun-Ey-07N"/>
+                    <constraint firstAttribute="trailing" secondItem="LYA-gP-yKS" secondAttribute="trailing" constant="45" id="XVb-up-i2I"/>
+                    <constraint firstAttribute="trailing" secondItem="svu-yf-mdG" secondAttribute="trailing" constant="45" id="Y4u-eo-P0p"/>
                     <constraint firstItem="1Qa-nY-j6C" firstAttribute="top" secondItem="bq0-4V-8KG" secondAttribute="bottom" constant="4" id="Ynd-Aj-rGo"/>
                     <constraint firstItem="5LZ-lz-rrq" firstAttribute="top" secondItem="xWa-RK-vjY" secondAttribute="top" id="bpS-Ae-lVO"/>
                     <constraint firstAttribute="trailing" secondItem="1Qa-nY-j6C" secondAttribute="trailing" constant="47" id="hOv-QW-ieg"/>
-                    <constraint firstItem="xWa-RK-vjY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="47" id="o4c-Gb-1pN"/>
+                    <constraint firstItem="xWa-RK-vjY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="33" id="o4c-Gb-1pN"/>
                     <constraint firstItem="1Qa-nY-j6C" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="47" id="oUW-t2-djP"/>
                     <constraint firstItem="LYA-gP-yKS" firstAttribute="top" secondItem="xWa-RK-vjY" secondAttribute="bottom" constant="25" id="rhE-CQ-4Wj"/>
                     <constraint firstAttribute="trailing" secondItem="bq0-4V-8KG" secondAttribute="trailing" constant="45" id="vGk-56-Dds"/>
-                    <constraint firstItem="LYA-gP-yKS" firstAttribute="trailing" secondItem="svu-yf-mdG" secondAttribute="trailing" constant="-2" id="vGr-Kr-d1b"/>
                     <constraint firstItem="bq0-4V-8KG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="47" id="xZQ-Pw-KVN"/>
                     <constraint firstItem="svu-yf-mdG" firstAttribute="top" secondItem="xWa-RK-vjY" secondAttribute="top" id="xaD-ao-kMx"/>
                 </constraints>
@@ -243,6 +248,18 @@
     </objects>
     <resources>
         <image name="lastMaster" width="40" height="40"/>
+        <namedColor name="FJARCRed">
+            <color red="0.93300002813339233" green="0.23100000619888306" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="FJDarkBlue">
+            <color red="0.0" green="0.11999999731779099" blue="0.55000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="FJGoldColor">
+            <color red="0.85900002717971802" green="0.4779999852180481" blue="0.22699999809265137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="FJGreenColor">
+            <color red="0.24899999797344208" green="0.82700002193450928" blue="0.1289999932050705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="FJIncidentPlaceHolderRedColor">
             <color red="1" green="0.27099999785423279" blue="0.22699999809265137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
